21-eks-fargate-serverless/133-2-profiles/03-ns-ums/02-mysql-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    runon: fargate 
  namespace: ns-ums
spec:
  type: ExternalName
  externalName: usermgmtdb.c2fammqas0yq.us-east-1.rds.amazonaws.com
